--- a/index.html
+++ b/index.html
@@ -17,21 +17,27 @@
         <header>
           <h1>Pass Fail Detector</h1>
           <h2>By <a href="http://jueezy.rocks">JU-Eezy</a></h2>
-          <p>ksujdh</p>
         </header>
         <div class="content">
           <br /><br />
           <p>
-            <strong>Etiam tristique libero</strong> eu nibh porttitor amet
-            fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies
-            condimentum.
+            <i>A Detector to know how risk you are taking ;-)</i>
           </p>
-
-          <p>
-            Vehicula ultrices sed ultricies condimentum. Magna sed etiam
-            consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et
-            dolor libero, feugiat magna tempus, sed et lorem adipiscing.
-          </p>
+          <a
+            href="https://github.com/CrazyLilOsama/Pass-Fail-Detector"
+            class="button primary"
+          >
+            Contribute</a
+          ><br /><br />
+          <h2>Contributers:</h2>
+          <ul>
+            <li>
+              <b><a href="#">Deepak Choudhary</a></b>
+            </li>
+            <li>
+              <b><a href="https://crazylilosama.me">Yashraj Mishra</a></b>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -141,7 +147,9 @@
           <ul class="items">
             <li>
               <h3>Email</h3>
-              <a href="mailto:mishra.yashrajs@gmail.com">mishra.yashrajs@gmail.com</a>
+              <a href="mailto:mishra.yashrajs@gmail.com"
+                >mishra.yashrajs@gmail.com</a
+              >
             </li>
             <li>
               <h3>Phone</h3>
