--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <header><h2>Result</h2></header>
         <div class="content">
           <h1 style="text-align: center;">
-            You are <strong style="color: #49fcd4;">Passed</strong>
+            You are <strong id="passStatusObject" style="color: #49fcd4;">Passed</strong>
           </h1>
         </div>
       </section>
