--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
   </div>
 
   <!-- Scripts -->
-  <script src="./assets/js/jquery.min.js"></script>
-  <script src="./assets/js/jquery.scrolly.min.js"></script>
-  <script src="./assets/js/browser.min.js"></script>
-  <script src="./assets/js/breakpoints.min.js"></script>
-  <script src="./assets/js/util.js"></script>
-  <script src="./assets/js/main.js"></script>
-  <script src="./assets/js/calculation.js"></script>
-  <script src="./assets/js/contributerList.js"></script>
-  <script src="./assets/contributer.json"></script>
+  <script  type="text/javascript" src="./assets/js/jquery.min.js"></script>
+  <script  type="text/javascript" src="./assets/js/jquery.scrolly.min.js"></script>
+  <script  type="text/javascript" src="./assets/js/browser.min.js"></script>
+  <script  type="text/javascript" src="./assets/js/breakpoints.min.js"></script>
+  <script  type="text/javascript" src="./assets/js/util.js"></script>
+  <script  type="text/javascript" src="./assets/js/main.js"></script>
+  <script  type="text/javascript" src="./assets/js/calculation.js"></script>
+  <script  type="text/javascript" src="./assets/js/contributerList.js"></script>
+  <script  type="text/javascript" src="./assets/contributer.json"></script>
 </body>
 
 </html>
