--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
           <ul class="actions">
             <li>
               <a onclick="findGrade()" class="button primary icon solid fa-calculator">Calculate</a>
+              <script>
+                function findGrade() {
+                  document.getElementById("resultObject").innerHTML = "<i>ksjbdhks</i>";
+                  console.log("Value Changed");
+                }
+              </script>
             </li>
             <li><input type="reset" value="Reset" /></li>
           </ul>
@@ -140,15 +146,15 @@
   </div>
 
   <!-- Scripts -->
-  <script  type="text/javascript" src="./assets/js/jquery.min.js"></script>
-  <script  type="text/javascript" src="./assets/js/jquery.scrolly.min.js"></script>
-  <script  type="text/javascript" src="./assets/js/browser.min.js"></script>
-  <script  type="text/javascript" src="./assets/js/breakpoints.min.js"></script>
-  <script  type="text/javascript" src="./assets/js/util.js"></script>
-  <script  type="text/javascript" src="./assets/js/main.js"></script>
-  <script  type="text/javascript" src="./assets/js/calculation.js"></script>
-  <script  type="text/javascript" src="./assets/js/contributerList.js"></script>
-  <script  type="text/javascript" src="./assets/contributer.json"></script>
+  <script type="text/javascript" src="./assets/js/jquery.min.js"></script>
+  <script type="text/javascript" src="./assets/js/jquery.scrolly.min.js"></script>
+  <script type="text/javascript" src="./assets/js/browser.min.js"></script>
+  <script type="text/javascript" src="./assets/js/breakpoints.min.js"></script>
+  <script type="text/javascript" src="./assets/js/util.js"></script>
+  <script type="text/javascript" src="./assets/js/main.js"></script>
+  <script type="text/javascript" src="./assets/js/calculation.js"></script>
+  <script type="text/javascript" src="./assets/js/contributerList.js"></script>
+  <script type="text/javascript" src="./assets/contributer.json"></script>
 </body>
 
 </html>
