--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           </div>
           <ul class="actions">
             <li>
-              <a onclick="findGrade()" class="button primary icon solid fa-calculator">Calculate</a>
+              <a onclick="naambadal()" class="button primary icon solid fa-calculator">Calculate</a>
               <script>
-                function findGrade() {
+                function naambadal() {
                   document.getElementById("resultObject").innerHTML = "<i>ksjbdhks</i>";
                   console.log("Value Changed");
                 }
