--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
           <ul class="actions">
             <li>
-              <a onclick="showgraderesult()" class="button primary icon solid fa-calculator">Calculate</a>
+              <a onclick="plzshowgraderesult()" class="button primary icon solid fa-calculator">Calculate</a>
             </li>
             <li><input type="reset" value="Reset" /></li>
           </ul>
